fix: refactored swipe open / close, updated z-index to work with layouts

--- a/css/noprefix/px-drawer.css
+++ b/css/noprefix/px-drawer.css
@@ -92,7 +92,6 @@
      * Dark
      */
 .drawer {
-  z-index: 210;
   -webkit-transform: translate3d(0, 0, 0);
   -ms-transform: translate3d(0, 0, 0);
   transform: translate3d(0, 0, 0);
@@ -112,8 +111,6 @@
     .drawer.is-open .drawer__mask {
       opacity: 1;
       visibility: visible; }
-    .drawer.is-open .drawer__content {
-      z-index: 350; }
   .drawer--shadow {
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.4); }
   .drawer__content {
@@ -300,6 +297,7 @@
       overflow: hidden; }
 
 .drawer--static {
+  z-index: auto;
   transform: translate3d(0, 0, 0);
   transition: all 0.5s cubic-bezier(0.1, 0.7, 0.1, 1);
   position: inherit;
