--- a/css/px-drawer.css
+++ b/css/px-drawer.css
@@ -92,7 +92,6 @@
      * Dark
      */
 .drawer {
-  z-index: 210;
   -webkit-transform: translate3d(0, 0, 0);
   transform: translate3d(0, 0, 0);
   display: block;
@@ -115,8 +114,6 @@
     .drawer.is-open .drawer__mask {
       opacity: 1;
       visibility: visible; }
-    .drawer.is-open .drawer__content {
-      z-index: 350; }
   .drawer--shadow {
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.4); }
   .drawer__content {
@@ -296,6 +293,7 @@
       overflow: hidden; }
 
 .drawer--static {
+  z-index: auto;
   -webkit-transform: translate3d(0, 0, 0);
           transform: translate3d(0, 0, 0);
   transition: all 0.5s cubic-bezier(0.1, 0.7, 0.1, 1);
